<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_campaign_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kevinsmith.iatracker.CampaignSelectNew"
    android:weightSum="1">

    <TextView
        android:text="@string/campSelect"
        android:layout_width="match_parent"
        android:id="@+id/campSelect"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_height="50dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:layout_weight="0.96">

        <RadioButton
            android:text="@string/baseName"
            android:layout_height="wrap_content"
            android:id="@+id/mBaseGameRad"
            android:layout_width="170dp"
            android:layout_gravity="top|center_horizontal"/>

        <RadioButton
            android:text="@string/twinName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/mTwinShadRad"
            android:layout_gravity="top|center_horizontal" />

        <RadioButton
            android:text="@string/hothName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/mHothRad"
            android:layout_gravity="top|center_horizontal" />

        <RadioButton
            android:text="@string/bespinName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/mBespinRad"
            android:layout_gravity="top|center_horizontal" />

        <RadioButton
            android:text="@string/jabbaName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/mJabbaRad"
            android:layout_gravity="top|center_horizontal"/>" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center">

        <Button
            android:text="@string/nextBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/mMissionSelectBtn"/>
    </LinearLayout>
</LinearLayout>
