<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_screen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:weightSum="1"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        android:weightSum="1"
        android:gravity="center">

        <ImageView
            android:layout_width="187dp"
            android:layout_height="252dp"
            app:srcCompat="@drawable/logo_rebel_imperial_mix_white_background"
            android:id="@+id/imageView"
            android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:text="@string/newCampaignBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/mNewCampaignBtn"/>

        <Button
            android:text="@string/loadCampaignBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/mLoadCampaignBtn" />

        <Button
            android:text="@string/aboutIAtrackerBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/mAboutBtn" />
    </LinearLayout>
</LinearLayout>
